@@ -1,3 +1,9 @@
+2001-08-03  Richard Henderson  <rth@redhat.com>
+
+	* except.c (collect_one_action_chain): Add an explicit cleanup
+	action if regions surrounding a catch were encoded entirely
+	within the call-site entry.
+
 2001-08-03  Stephane Carrez  <Stephane.Carrez@worldnet.fr>
 
 	* config/m68hc11/t-m68hc11-gas (T_CPPFLAGS): Add _ctor and _dtor.
